# tasksmd-sync

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FORMAT.md  README.md  TASKS.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  prepare-release.yml  release.yml  tasksmd-sync.yml
examples/: TASKS.md  workflow.yml
tasksmd_sync/: __init__.py  cli.py  github_projects.py  models.py  parser.py  sync.py  writeback.py
tests/: test_archive_done.py  test_execute_sync.py  test_parser.py  test_sync.py  test_writeback.py
