[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasksmd-sync"
version = "0.1.0"
description = "One-way sync from TASKS.md files to GitHub Project boards"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.scripts]
tasksmd-sync = "tasksmd_sync.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
